--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
+    "react-multi-carousel": "^2.8.6",
     "react-on-screen": "^2.1.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
