--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://Jbae1004.github.io/j1bae-portfolio",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
