--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-on-screen": "^2.1.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
+    "sass": "^1.90.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
