--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.7",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "motion": "^12.23.12",
     "react": "^19.1.0",
