--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/((?!resume\\.pdf).*)", "destination": "/index.html" }
   ],
   "builds": [
     { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
   ]
+
+  
 }
