--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,17 @@
 {
   "rewrites": [
-   { "source": "/((?!Resume\\.pdf).*)", "destination": "/index.html" }
+    { "source": "/((?!Resume\\.pdf).*)", "destination": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/Resume.pdf",
+      "headers": [
+        {
+          "key": "Content-Disposition",
+          "value": "attachment; filename=\"Jiwon_Bae_Resume.pdf\""
+        }
+      ]
+    }
   ],
   "builds": [
     { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
